--- a/sumana/Bitcoin/templates/tradingvolume.html
+++ b/sumana/Bitcoin/templates/tradingvolume.html
@@ -19,9 +19,9 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
-    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
 	<link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.css" />
   	<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
   	<script type='text/javascript' src='http://cdn.leafletjs.com/leaflet/v1.3.1/leaflet.js'></script>
@@ -59,7 +59,7 @@
 
 		<!-- drop down -->
 					<div class="content">
-						<select id="selectData" onchange='getData(this.value,true)' style="width: 180px;">
+						<select id="selectData" onchange='getData(this.value,true)' style="width: 220px;">
 								<option value='volume' selected>Volume of Trade</option>
 								<option value='trade' >Trade per min</option>
 						</select>
@@ -70,7 +70,7 @@
 		<!-- Bargraph plotting -->
 
 			<div class="content">
-				<select id="selectData" onchange='getFactor(this.value,true)' style="width: 180px;">
+				<select id="selectData" onchange='getFactor(this.value,true)' style="width: 220px;">
 						<option value='count' selected>Exchange count</option>
 						<option value='volume' >Trade Volume</option>
 						<option value='trade' >Trade per min</option>
@@ -94,18 +94,18 @@
 
 		<!-- Scripts -->
 		
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script type='text/javascript' src='assets/data/volumetrade_geoeuro.json'></script>
-			<script type='text/javascript' src='assets/data/avgtrade_geoeuro.json'></script>
-      		<script type='text/javascript' src='assets/data/volume.json'></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
+			<script type='text/javascript' src='../assets/data/volumetrade_geoeuro.json'></script>
+			<script type='text/javascript' src='../assets/data/avgtrade_geoeuro.json'></script>
+      		<script type='text/javascript' src='../assets/data/volume.json'></script>
 			<!-- <script type='text/javascript' src='assets/data/avgtrade_geo.json'></script>  -->
-			<script type='text/javascript' src='assets/data/trade.json'></script> 
-			<script type='text/javascript' src='assets/js/map.js'></script>
-			<script type='text/javascript' src='assets/js/bargraph.js'></script>
+			<script type='text/javascript' src='../assets/data/trade.json'></script> 
+			<script type='text/javascript' src='../assets/js/map.js'></script>
+			<script type='text/javascript' src='../assets/js/bargraph.js'></script>
 			  
 
 	</body>
