--- a/templates/algo.html
+++ b/templates/algo.html
@@ -51,19 +51,24 @@
 					<div class="content">
 						
 						<h2>Algorithms Reviewed and Implemented</h2>
-						<h3><em><b>Linear Regression</b></em></h3>
-						<h3><em><b>ARIMA</b></em></h3>
-						<h3><em><b>Facebook Prophet</b></em></h3>
-						<h3><em><b>RNN using LSTM (Tensorflow  + Keras)</b></em></h3>
+						
+						<ul>
+  							<li><h3><em><b>Linear Regression</b></em></h3></li>
+ 							<li><h3><em><b>ARIMA</b></em></h3></li>
+  							<li><h3><em><b>Facebook Prophet</b></em></h3></li>
+  							<li><h3><em><b>RNN using LSTM (Tensorflow  + Keras)</b></em></h3></li>
+						</ul>
 						
 						<p>
-							
+						<h4><em><b>"All models are wrong, some are useful."</b></em></h4>
+                                         <h4><en><b>GEORGE E BOX, British statistician</b></en></h4>
 						</p>
-
+						
 					</div>
 					<div class="content">
 						
-						<h2>ARIMA</h2>
+						<h2><b>ARIMA</b></h2>
+						<img src="../images/ARIMA.png" alt="Random Walk">
 						<hr>
 						
 
