--- a/templates/algo.html
+++ b/templates/algo.html
@@ -68,11 +68,46 @@
 					<div class="content">
 						
 						<h2><b>ARIMA</b></h2>
-						<img src="../images/ARIMA.png" alt="Random Walk">
-						<hr>
-						
+						<img src="../images/ARIMA.png" alt="Arima Walk">
+						<p>	
+						<ul>
+						<li><h3><b>AR</b>- Auto Regression - Degree to which the variable coorelates to itself (p - period) </h3></li>
+						<li><h3><B>I</B>- Degree of difference on the data to make the data stationary. Degree 1 replace D(I) = D(I) - D(I-1) )</h3> </li>
+						<li><h3><b>MA</b>- Moving Average on a  series where you average within a predefined time window. q = 9 for 9 day MA</h3></li>
+						</ul>
+						</p>	
+                        
+			    	</div>
+			    	<div class="content">
+						<h2><b>faceBook - Prophet</b></h2>
+						<img src="../images/Prophet.png" alt="Prophet Walk">
+						<p>	
+                        <h3><b>How Prophet works</b>
+						<h3>At its core, the Prophet procedure is an additive regression model with four main components:</h3>
+						<ul>
+						<li><h3>A piecewise linear or logistic growth curve trend. Prophet automatically detects changes in trends by selecting changepoints from the data.<h3></li>
+                        <li><h3>A yearly seasonal component modeled using Fourier series.<h3></li>
+						<li><h3>A weekly seasonal component using dummy variables.<h3></li>
+						<li><h3> user-provided list of important holidays.<h3></li>
+						</ul>
+						<h3>
+						</p>	
+                   	</div>
 
-					</div>
+                   	<div class="content">
+						<h2><b>RNN using LSTM (Tensorflow  + Keras)</b></h2>
+						<img src="../images/Tensorflow.png" alt="Tensorflow Walk">
+						<p>	
+                       	<h3><b>Recuurent</b> NN allows you to connect previous information to the prsent frame</h3>
+						<ul>
+						<li><h3><b>Long Short Term Memory networks</b> usually just called “LSTMs” – are a special kind of RNN, capable of learning long-term dependencies.<h3></li>
+                        <li><h3>We define the Time Series problem as 3 dimensional Input vector to the RNN network <h3></li>
+						<li><h3>X{ Open(T-1), Close(T-1), High(T-1), Low(T-1), volume(T-1)...etc}, TimeStep { 1 day },Y{Closing Price(T)}.For ex. <h3></li>
+						<li><h3> model.fit(train_X, train_y, epochs=50, batch_size=72, validation_data=(test_X, test_y), verbose=2, shuffle=False<h3></li>
+						</ul>
+						<h3>
+						</p>	
+                   	</div>
 				</div>
 			</section>
 
