added algo html

--- a/sumana/Bitcoin/templates/index.html
+++ b/sumana/Bitcoin/templates/index.html
@@ -32,6 +32,7 @@
 					<li><a href="introduce.html">Introduction </a></li>
 					<li><a href="tradingvolume.html">Trading Analysis</a></li>
 					<li><a href="generic.html">Predictive Analysis</a></li>
+					<li><a href="algo.html">Algorithm Overview</a></li>
 					
 					
 				</ul>
