--- a/sumana/Bitcoin/templates/generic.html
+++ b/sumana/Bitcoin/templates/generic.html
@@ -26,6 +26,7 @@
 					<li><a href="introduce.html">Introduction </a></li>
 					<li><a href="tradingvolume.html">Trading Analysis</a></li>
 					<li><a href="generic.html">Predictive Analysis</a></li>
+					<li><a href="algo.html">Algorithm Overview</a></li>
 					
 					
 				</ul>
