--- a/jamie/Bitcoin/templates/test.html
+++ b/jamie/Bitcoin/templates/test.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test_index</title>
+    <title>BTC Predict Model</title>
 </head>
 
 <body>
-    <h3>Inputs</h3>
+    <h3>Variables</h3>
     <form action="/" method="POST">
-
-
+        
         <input type="checkbox" name="chk_box" value='open' checked>Open
         <input type="checkbox" name="chk_box" value='high' checked>High
         <input type="checkbox" name="chk_box" value='low' checked>Low
@@ -30,12 +29,19 @@
         <input type="checkbox" name="chk_box" value='volume_currency' checked>Volume (Currency)
         
         <br><br>
+        
+        <input id="date" type="date" name="date" value="2017-10-01" min="2016-01-01" max="2017-12-31">
+        
+        <br><br>
 
         <input type="submit" value="submit">
     </form>
 
-    <h3>Test Plot</h3>
+    <h3>RNN Model</h3>
     <div id="graph-0"></div>
+    <br><br>
+    <h3>Facebook Prophet Model</h3>
+    <div id="graph-1"></div>
 
 </body>
 
@@ -50,7 +56,9 @@
 
     <script type="text/javascript">
         var graph = {{graphJSON | safe}};
+        var graph_fb = {{graphJSON_fb | safe}};
         Plotly.plot("graph-0", graph.data, graph.layout);
+        Plotly.plot("graph-1", graph_fb.data, graph_fb.layout);
     </script>
 </footer>
 
