corrected the algo html

--- a/sumana/Bitcoin/templates/algo.html
+++ b/sumana/Bitcoin/templates/algo.html
@@ -101,7 +101,7 @@
 						<hr>
 						<img src="../images/Tensorflow.png" alt="Tensorflow Walk">
 						<p>	
-                       	<h3><b>Recuurent</b> NN allows you to connect previous information to the prsent frame</h3>
+                       	<h3><b>Recurrent Neural Network (RNN) </b>allows you to connect previous information to the prsent frame</h3>
 						<ul>
 						<li><h3><b>Long Short Term Memory networks</b> usually just called “LSTMs” – are a special kind of RNN, capable of learning long-term dependencies.<h3></li>
                         <li><h3>We define the Time Series problem as 3 dimensional Input vector to the RNN network <h3></li>
